--- a/templates/more.html
+++ b/templates/more.html
@@ -10,6 +10,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
 
     <!-- Optional Custom Styles -->
+    <style>
+        body{
+            background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('{{ url_for('static', filename='background.jpg') }}') no-repeat center center;
+            background-size: cover;
+        }
+    </style>
 </head>
 <body>
 
@@ -25,29 +31,20 @@
                     <li class="nav-item">
                         <a class="nav-link active" aria-current="page" href="/">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/about">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/add">Add</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Contact</a>
-                    </li>
                 </ul>
             </div>
         </div>
     </nav>
 
     <!-- Main Content Section -->
-    <section class="container my-5">
+    <section class="container my-5" id="head">
     <div class="row">
         <div class="col-lg-4 col-md-6 col-sm-12 mb-3" style="padding-top:130px; margin-left:450px;">
             <div class="card h-100" style="height:700px;">
                 <img src="{{ url_for('media_files', filename=my_dress.image) }}" class="card-img-top" alt="{{ my_dress.name }}" style="width: 100%; height: auto; max-height: 250px; object-fit: contain; padding-top:20px;"> <!-- Responsive image -->
                 <div class="card-body d-flex flex-column">
-                    <h5 class="card-title" style="color:pink;padding-left:180px;">{{my_dress.name}}</h5>
-                    <p class="card-text" style="padding-left:180px;">₹{{my_dress.price}}/-</p>
+                    <h5 class="card-title" style="color:black;padding-left:180px;">{{my_dress.name}}</h5>
+                    <p class="card-text" style="padding-left:180px;">₹{{my_dress.price}}</p>
                     <div style="display:inline;">
                         <a href="/addcart/{{my_dress.id}}" class="btn btn-danger mt-3" style="width:150px;margin-left:40px;">Addcart</a>
                         <a href="/buynow/{{my_dress.id}}" class="btn btn-danger mt-3" style="width:150px;">Buy now</a>
